<resources>
    <string name="app_name">ZTE 286R Widget</string>
    <string name="widget_name">ZTE 286R Veri Kullanımı</string>
    <string name="widget_description">ZTE 286R router veri kullanımını gösterir</string>
    <string name="widget_used">Kullanılan</string>
    <string name="widget_loading">Yükleniyor...</string>
    <string name="widget_error">Bağlanılamadı</string>
    <string name="widget_configure">Ayarlar</string>
    <string name="widget_refresh">Yenile</string>
    <string name="settings_title">Widget Ayarları</string>
    <string name="settings_router_ip">Router IP Adresi</string>
    <string name="settings_router_ip_hint">örn: 192.168.1.1</string>
    <string name="settings_username">Kullanıcı Adı</string>
    <string name="settings_username_hint">örn: admin</string>
    <string name="settings_password">Şifre</string>
    <string name="settings_password_hint">Router yönetim şifresi</string>
    <string name="settings_save">Kaydet</string>
    <string name="settings_saved">Ayarlar kaydedildi</string>
    <string name="settings_test">Bağlantıyı Test Et</string>
    <string name="settings_testing">Test ediliyor...</string>
    <string name="settings_test_success">Bağlantı başarılı!</string>
    <string name="settings_test_fail">Bağlantı başarısız</string>
    <string name="settings_update_interval">Güncelleme Aralığı</string>
    <string name="settings_interval_15min">15 dakika</string>
    <string name="settings_interval_30min">30 dakika</string>
    <string name="settings_interval_1hour">1 saat</string>
    <string name="settings_interval_6hour">6 saat</string>
    <string name="settings_interval_12hour">12 saat</string>
    <string name="settings_interval_24hour">24 saat</string>
    <string name="settings_show_total">Toplam kullanımı göster</string>
    <string name="settings_show_download">İndirme kullanımını göster</string>
    <string name="settings_show_upload">Yükleme kullanımını göster</string>
    <string name="settings_show_all">Tümünü göster</string>
    <string name="settings_display_mode">Gösterim Modu</string>
    <string name="settings_display_total">Toplam (Used)</string>
    <string name="settings_display_download">İndirme (Download)</string>
    <string name="settings_display_upload">Yükleme (Upload)</string>
    <string name="settings_display_both">İndirme + Yükleme</string>
    <string name="last_update">Son güncelleme</string>
    <string name="widget_total_used">Toplam Kullanım</string>
    <string name="widget_download">İndirme</string>
    <string name="widget_upload">Yükleme</string>
</resources>